# Testing-Automate-Firmware-Version

./: .gitattributes  README.md  VERSION  installation.md
.githooks/: pre-commit
.github/workflows/: auto-tag.yml
install/: Install Git.ps1  Install Githooks.ps1  Install.ps1  Start_Installation.bat
sample_project/: CMakeLists.txt  version.h.in
sample_project/.github/workflows/: auto-tag.yml
sample_project/main/: CMakeLists.txt  main.c  version.h.in
scripts/: bump_version.ps1  bump_version.sh
